--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <footer>
         
-        <p>This project is maintained by <a href="https://github.com/pages-themes">Scott Mesdjian</a></p>
+        <p>This project is maintained by <a href="https://github.com/scottmez">Scott Mesdjian</a></p>
         
         <p><small>Hosted on GitHub Pages</small></p>
       </footer>
