added dark theme

--- a/index.html
+++ b/index.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
-    <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
-
-<!-- Setup Google Analytics -->
-
-
-
-<!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="/minimal/favicon.ico" -->
-
-<!-- end custom head snippets -->
-
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="wrapper">
@@ -37,6 +24,7 @@
         <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
 
