position footer at bottom left of the page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <p><a href="https://scottmez.itch.io">Quit</a></p>  
       </header>
 
-      <footer>
+      <div class="footer">
         
         <p>This project is maintained by <a href="https://github.com/scottmez">Scott Mesdjian</a></p>
         
         <p><small>Hosted on GitHub Pages</small></p>
-      </footer>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
