--- a/desktop.html
+++ b/desktop.html
@@ -10,7 +10,7 @@
       <body>
         <div class="wrapper">
           <div>
-            <p><a href="scottmez.github.io\index.html">Scott Mesdjian.exe</a></p>
+            <p><a href="index.html">Scott Mesdjian.exe</a></p>
           </div>
     
           <div class="footer">
