--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p><a href="https://scottmez.itch.io">Play</a></p>
         <p><a href="https://scottmez.itch.io">Settings</a></p>
         <p><a href="https://scottmez.itch.io">Credits</a></p>
-        <p><a href="scottmez.github.io\desktop.html">Quit</a></p>  
+        <p><a href="desktop.html">Quit</a></p>  
       </header>
 
       <div class="footer">
