--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/83300aa9ae.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="wrapper">
       <header>
         <h1>Scott Mesdjian</h1>
         <p>Main Menu</p>
-        <p><a href="https://scottmez.itch.io">Play</a></p>
+        <p><i class="fa-solid fa-play" style="color: #000000;"></i> <a href="https://scottmez.itch.io">Play</a></p>
         <p><a href="https://scottmez.itch.io">Settings</a></p>
         <p><a href="https://scottmez.itch.io">Credits</a></p>
         <p><a href="desktop.html">Quit</a></p>  
