created icon and improved likeness to windows home screen

--- a/desktop.html
+++ b/desktop.html
@@ -8,10 +8,14 @@
       </head>
       <body>
         <div class="wrapper">
-          <div>
-            <p><a href="index.html">Scott Mesdjian.exe</a></p>
+          <div class="outline">
+            <a href="index.html">
+              <img src="ScottIcon_64A.jpg" alt="ScottIcon">
+              <div class="title">
+                  Scott Mesdjian.exe
+              </div>
+            </a>
           </div>
-    
           <div class="footer">
             
             <p>This project is maintained by <a href="https://github.com/scottmez">Scott Mesdjian</a></p>
