commented js scripts and built hover feature in css

--- a/index.html
+++ b/index.html
@@ -12,11 +12,31 @@
     <div class="wrapper">
       <header>
         <h1>Scott Mesdjian</h1>
-        <p>Main Menu</p>
-        <p><i class="fa-solid fa-play" style="color: #000000;"></i> <a href="https://scottmez.itch.io">Play</a></p>
-        <p><a href="https://scottmez.itch.io">Settings</a></p>
-        <p><a href="https://scottmez.itch.io">Credits</a></p>
-        <p><a href="desktop.html">Quit</a></p>  
+        <h3>Main Menu</h3>
+        <p>
+          <a href="https://scottmez.itch.io">
+            <i class="fa-solid fa-play" style="color: #000000;"></i> 
+            Play
+          </a>
+        </p>
+        <p>
+          <a href="https://scottmez.itch.io">
+            <i class="fa-solid fa-play" style="color: #000000;"></i>
+            Settings
+          </a>
+        </p>
+        <p>
+          <a href="https://scottmez.itch.io">
+            <i class="fa-solid fa-play" style="color: #000000;"></i>
+            Credits
+          </a>
+        </p>
+        <p>
+          <a href="desktop.html">
+            <i class="fa-solid fa-play" style="color: #000000;"></i>
+            Quit
+          </a>
+        </p>  
       </header>
 
       <div class="footer">
