update settings and credits links

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
           </a>
         </p>
         <p>
-          <a href="https://scottmez.itch.io">
+          <a href="https://github.com/scottmez/scottmez.github.io">
             <i class="fa-solid fa-play" style="color: #000000;"></i>
             Settings
           </a>
         </p>
         <p>
-          <a href="https://scottmez.itch.io">
+          <a href="https://github.com/scottmez">
             <i class="fa-solid fa-play" style="color: #000000;"></i>
             Credits
           </a>
