--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <h1>Scott Mesdjian</h1>
         <h3>Main Menu</h3>
         <p>
-          <a href="https://scottmez.itch.io">
+          <a target="_blank" href="https://scottmez.itch.io">
             <i class="fa-solid fa-play" style="color: #000000;"></i> 
             Play
           </a>
         </p>
         <p>
-          <a href="https://github.com/scottmez/scottmez.github.io">
+          <a target="_blank" href="https://github.com/scottmez/scottmez.github.io">
             <i class="fa-solid fa-play" style="color: #000000;"></i>
             Settings
           </a>
         </p>
         <p>
-          <a href="https://github.com/scottmez">
+          <a target="_blank" href="https://github.com/scottmez">
             <i class="fa-solid fa-play" style="color: #000000;"></i>
             Credits
           </a>
