--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
       </header>
 
       <div class="footer">
-        
-        <p>This project is maintained by <a href="https://github.com/scottmez">Scott Mesdjian</a></p>
-        
+        <p><small>Artwork created by Eder Muniz</small></p>
+        <p><small>This project is maintained by <a href="https://github.com/scottmez">Scott Mesdjian</a></small></p>
         <p><small>Hosted on GitHub Pages</small></p>
       </div>
     </div>
