changed color of play arrow

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         <h3>Main Menu</h3>
         <p>
           <a target="_blank" href="https://scottmez.itch.io">
-            <i class="fa-solid fa-play" style="color: #000000;"></i> 
+            <i class="fa-solid fa-play" style="color: #ffffff;"></i> 
             Play
           </a>
         </p>
         <p>
           <a target="_blank" href="https://github.com/scottmez/scottmez.github.io">
-            <i class="fa-solid fa-play" style="color: #000000;"></i>
+            <i class="fa-solid fa-play" style="color: #ffffff;"></i>
             Settings
           </a>
         </p>
         <p>
           <a target="_blank" href="https://github.com/scottmez">
-            <i class="fa-solid fa-play" style="color: #000000;"></i>
+            <i class="fa-solid fa-play" style="color: #ffffff;"></i>
             Credits
           </a>
         </p>
         <p>
           <a href="desktop.html">
-            <i class="fa-solid fa-play" style="color: #000000;"></i>
+            <i class="fa-solid fa-play" style="color: #ffffff;"></i>
             Quit
           </a>
         </p>  
