--- a/index.html
+++ b/index.html
@@ -78,6 +78,298 @@
         </div>
       </div>
     </section>
+    <section id="about">
+      <p class="section__text__p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img
+            src="./assets/about-pic.png"
+            alt="Profile picture"
+            class="about-pic"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img 
+                src="./assets/experience.png"
+                alt="Experience icon"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>2+ years <br /> Software Development</p>
+            </div>
+            <div class="details-container">
+              <img 
+                src="./assets/education.png"
+                alt="Education icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>M.Sc. Computer Science</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p> 
+              Lorejfhald
+              kjfhaldjalkj ljad flja dlja fj d jj dhl
+              d fada 
+              eipurq nancx aeoi auna caoeura Contact
+              cnaoieus aocaoeuyacdn aauoi
+              ncmal oiuewd
+              jnalkj foi une rb yu
+              Lorejfhald
+              kjfhaldjalkj ljad flja dlja fj d jj dhl
+              d fada 
+              eipurq nancx aeoi auna caoeura Contact
+              cnaoieus aocaoeuyacdn aauoi
+              ncmal oiuewd
+              jnalkj foi une rb yu
+              Lorejfhald
+              kjfhaldjalkj ljad flja dlja fj d jj dhl
+              d fada 
+              eipurq nancx aeoi auna caoeura Contact
+              cnaoieus aocaoeuyacdn aauoi
+              ncmal oiuewd
+              jnalkj foi une rb yu
+            </p>
+          </div>
+        </div>
+      </div>
+      <img 
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
+    </section>
+    <section id="experience">
+      <p class="section__text__p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">Frontend Development</h2>
+            <div class="article-container">
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>CSS</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>Javascript</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Backend Development</h2>
+            <div class="article-container">
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>PostgreSQL</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>SQLite</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>Git</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Game Development</h2>
+            <div class="article-container">
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>Unity</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>UE5</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>Godot</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img 
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href='./#projects'"
+      />
+    </section>
+    <section id="projects">
+      <p class="section__text__p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img 
+                src="./assets/project-1.png" 
+                alt="Project 1" 
+                class="project-img"/>
+            </div>
+            <h2 class="experience-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img 
+                src="./assets/project-2.png" 
+                alt="Project 2" 
+                class="project-img"/>
+            </div>
+            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img 
+                src="./assets/project-3.png" 
+                alt="Project 3" 
+                class="project-img"/>
+            </div>
+            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img 
+        src="./assets/arrow.png"
+        alt="Arrow Icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
+    </section>
+    <section id="contact">
+      <p class="section__text__p1">Get In Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img 
+            src="./assets/email.png" 
+            alt="Email Icon" 
+            class="icon contact-icon email-icon">
+          <p><a href="mailto:scottmesdjian10@gmail.com">scottmesdjian10@gmail.com</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img 
+            src="./assets/linkedin.png" 
+            alt="LinkedIn Icon" 
+            class="icon contact-icon">
+          <p><a href="https://www.linkedin.com/in/scott-mesdjian/">LinkedIn</a></p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 Scott Mesdjian. All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
