--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Scott Mesdjian Profile Picture">
+        <img 
+          src="./assets/Scott_headshot.png" 
+          alt="Scott Mesdjian Profile Picture" 
+          class="circle-pic headshot">
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello I'm</p>
@@ -84,9 +87,9 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/Scott_headshot_bw_side.png"
             alt="Profile picture"
-            class="about-pic"
+            class="about-pic headshot"
           />
         </div>
         <div class="about-details-container">
