added about me text

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br /> Software Development</p>
+              <p>5+ years <br /> Software Development</p>
             </div>
             <div class="details-container">
               <img 
@@ -115,27 +115,16 @@
           </div>
           <div class="text-container">
             <p> 
-              Lorejfhald
-              kjfhaldjalkj ljad flja dlja fj d jj dhl
-              d fada 
-              eipurq nancx aeoi auna caoeura Contact
-              cnaoieus aocaoeuyacdn aauoi
-              ncmal oiuewd
-              jnalkj foi une rb yu
-              Lorejfhald
-              kjfhaldjalkj ljad flja dlja fj d jj dhl
-              d fada 
-              eipurq nancx aeoi auna caoeura Contact
-              cnaoieus aocaoeuyacdn aauoi
-              ncmal oiuewd
-              jnalkj foi une rb yu
-              Lorejfhald
-              kjfhaldjalkj ljad flja dlja fj d jj dhl
-              d fada 
-              eipurq nancx aeoi auna caoeura Contact
-              cnaoieus aocaoeuyacdn aauoi
-              ncmal oiuewd
-              jnalkj foi une rb yu
+              I am a graduate from the University of California,
+              Riverside, where I got my Master's degree in Computer 
+              Science in March of 2024.
+              I currently work at DataAnnotation where I hold the title 
+              Software Developer - AI Trainer (Contract). 
+              I have worked for DataAnnotation since January of 2024. 
+              My main duties 
+              involve creating prompts for AI chatbots to answer and 
+              grading their answers. I work with a variety of coding 
+              languages including C++, Python, and Java. 
             </p>
           </div>
         </div>
