--- a/index.html
+++ b/index.html
@@ -276,47 +276,44 @@
                 alt="Project 1" 
                 class="project-img"/>
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Game Jam Games</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                Github
-              </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                Live Demo
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://scottmez.itch.io'">
+                Play Games
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img 
-                src="./assets/project-2.png" 
+                src="./assets/coming-soon (1).png" 
                 alt="Project 2" 
                 class="project-img"/>
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Full Stack E-Commerce Site</h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                Github
+                Github (WIP)
               </button>
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                Live Demo
+                Live Demo (WIP)
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img 
-                src="./assets/project-3.png" 
+                src="./assets/coming-soon (1).png" 
                 alt="Project 3" 
                 class="project-img"/>
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">AR/XR Phone App</h2>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                Github
+                Github (WIP)
               </button>
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                Live Demo
+                Live Demo (WIP)
               </button>
             </div>
           </div>
