--- a/index.html
+++ b/index.html
@@ -284,19 +284,16 @@
             </div>
           </div>
           <div class="details-container color-container">
-            <div class="article-container">
+            <div class="article-container mt-6 mb-7">
               <img 
-                src="./assets/coming-soon (1).png" 
+                src="./assets/Forever_Home.png" 
                 alt="Project 2" 
                 class="project-img"/>
             </div>
             <h2 class="experience-sub-title project-title">Full Stack E-Commerce Site</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                Github (WIP)
-              </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
-                Live Demo (WIP)
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://youtu.be/K3YTNNXVHTY'">
+                Live Demo
               </button>
             </div>
           </div>
