added more skills from a recent project

--- a/index.html
+++ b/index.html
@@ -163,7 +163,29 @@
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>React</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>TailwindCSS</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -211,8 +233,30 @@
                   class="icon"
                 />
                 <div>
+                  <h3>MongoDB</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>Cloudinary</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <p>Expert</p>
                 </div>
               </article>
             </div>
@@ -240,6 +284,17 @@
                 <div>
                   <h3>UE5</h3>
                   <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img 
+                  src="./assets/checkmark.png" 
+                  alt="experience icon" 
+                  class="icon"
+                />
+                <div>
+                  <h3>GameMaker</h3>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
